# BsPatchApk

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bspatch.c  com_patch_demo_BsPatch.h
app/src/main/java/com/patch/demo/: ApkUtils.java  BsPatch.java  Contants.java  DownLoadUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
